--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                     <li>
                         <span class="text">Cryptocurrency</span>
                     </li>
+                    <li>
+                        <span class="text">Gaming</span>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -110,46 +113,9 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="aboutTitle">About me</h2>
-                <p>Ik ben een hardwerkende, flexibele en doelgerichte persoon, die geïnteresseerd is 
-                    in programmeren en security. Ik zou mezelf het best kunnen omschrijven als een
-                    bever, deze staat symbool voor rustig, hardwerkend en bescheiden.</p>
-            </div>
-
-            <div class="about">
-                <h2 class="aboutTitle">Work Experience</h2>
-                <div class="box">
-                    <div class="year_company">
-                        <h5>2016 - Present</h5>
-                        <h5>Smatch Brugge</h5>
-                    </div>
-                    <div class="text">
-                        <h4>Polyvalent Medewerker</h4>
-                        <p>In mijn huidige functie heb ik verschillende taken zoals aanvullen, aan de kassa staan en werken in het magazijn.</p>
-                        <p>Tot 2021 werkte ik daar als jobstudent en daarna als tijdelijk medewerker.</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="year_company">
-                        <h5>2020/02 - 2020/05</h5>
-                        <h5>Silicon NV</h5>
-                    </div>
-                    <div class="text">
-                        <h4>Stage Security</h4>
-                        <p>Ik volgde stage bij Silicon NV, waar ik als hoofdopdracht een procedure moest opstellen voor het uitvoeren van een  vulnerability audit.</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="year_company">
-                        <h5>2017/05 - 2017/05</h5>
-                        <h5>Boekhouding Fiscaliteit Feys</h5>
-                    </div>
-                    <div class="text">
-                        <h4>Stage Accountancy</h4>
-                        <p>Tijdens mijn stage moest ik vooral aan- en verkoop facturen inboeken en daarnaast had ik nog een  paar administratieve taken.</p>
-                    </div>
-                </div>
+                <p>Ik ben een hardwerkende, flexibele en doelgerichte persoon, die
+                    geïnteresseerd is in het ontwikkelen van applicaties en security. Ik zou mezelf het best kunnen omschrijven als een bever, deze staat symbool voor rustig, hardwerkend en bescheiden.
+                    </p>
             </div>
 
             <div class="about">
@@ -199,11 +165,49 @@
                 </div>
             </div>
 
+            <div class="about">
+                <h2 class="aboutTitle">Work Experience</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2016 - Present</h5>
+                        <h5>Smatch Brugge</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Polyvalent Medewerker</h4>
+                        <p>In deze functie had ik verschillende taken en moest ik over de nodige skills beschikken. Daarnaast moest ik vlot kunnen omgaan met klanten en leveranciers. Hier moest ik zowel in groep als individueel kunnen werken.</p>
+                        <p>Tot 2021 werkte ik daar als jobstudent en daarna als tijdelijk medewerker.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2020/02 - 2020/05</h5>
+                        <h5>Silicon NV</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Stage Security</h4>
+                        <p>Ik volgde stage bij Silicon NV, waar ik als hoofdopdracht een procedure moest opstellen voor het uitvoeren van een  vulnerability audit.</p>
+                        <p>Deze opdracht moest ik op zelfstandige basis opstellen.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2017/05 - 2017/05</h5>
+                        <h5>Boekhouding Fiscaliteit Feys</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Stage Accountancy</h4>
+                        <p>Tijdens mijn stage moest ik vooral aan- en verkoop facturen inboeken en daarnaast had ik nog een  paar administratieve taken.</p>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="about skills">
                 <h2 class="aboutTitle">Professional Skills</h2>
                 <div class="box">
-                    <h4>Windows</h4>
+                    <h4>Windows & Windows server</h4>
                     <div class="percent">
                         <div style="width: 80%;"></div>
                     </div>
@@ -221,7 +225,25 @@
                     </div>
                 </div>
                 <div class="box">
-                    <h4>MySQL, MySQL server</h4>
+                    <h4>NODEJS</h4>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>REACTJS</h4>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>LARAVEL</h4>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>MySQL & MySQL server</h4>
                     <div class="percent">
                         <div style="width: 80%;"></div>
                     </div>
